--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
-  "keywords": ["react", "starter"],
+  "keywords": [
+    "react",
+    "starter"
+  ],
   "main": "src/index.js",
   "dependencies": {
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.0"
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "4.0.0",
+    "scss": "0.2.4",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -19,5 +26,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
